--- a/src/application/ui/LibrarianTabbed.fxml
+++ b/src/application/ui/LibrarianTabbed.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.effect.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.text.*?>
 <?import java.lang.*?>
@@ -7,19 +8,18 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<Pane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ui.LibrarianController">
+<Pane maxHeight="650.0" maxWidth="900.0" minHeight="600.0" minWidth="900.0" prefHeight="600.0" prefWidth="900.0" style="-fx-border-color: orange; -fx-border-width: 5px;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ui.LibrarianController">
    <children>
       <AnchorPane layoutX="-4.0" layoutY="122.0">
          <children>
-            <TabPane id="tbcheckout" layoutX="7.0" prefHeight="382.0" prefWidth="698.0" tabClosingPolicy="UNAVAILABLE">
+            <TabPane id="tbcheckout" layoutX="17.0" prefHeight="435.0" prefWidth="873.0" style="-fx-border-color: orange; -fx-border-width: 3px;" tabClosingPolicy="UNAVAILABLE">
               <tabs>
                 <Tab fx:id="tbCheckout" text="Checkout">
                   <content>
-                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="314.0" prefWidth="606.0">
+                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="396.0" prefWidth="868.0">
                            <children>
-                              <Button id="btnCancel" layoutX="191.0" layoutY="215.0" mnemonicParsing="false" onMouseClicked="#cancelHandler" prefHeight="37.0" prefWidth="133.0" text="Cancel" textFill="#cd2323" />
-                              <Button id="btnCheckout" layoutX="335.0" layoutY="215.0" mnemonicParsing="false" onMouseClicked="#checkoutHandler" prefHeight="37.0" prefWidth="133.0" text="Checkout" textFill="#64c384" />
-                              <GridPane layoutX="117.0" layoutY="41.0" prefHeight="157.0" prefWidth="414.0" style="-fx-background-color: #e2e1d7;" AnchorPane.bottomAnchor="151.0" AnchorPane.leftAnchor="117.0" AnchorPane.rightAnchor="167.0" AnchorPane.topAnchor="41.0">
+                              <Button id="btnCancel" layoutX="107.0" layoutY="285.0" mnemonicParsing="false" onAction="#cancelHandler" onMouseClicked="#cancelHandler" prefHeight="37.0" prefWidth="133.0" style="-fx-border-color: red;" text="CANCEL" textFill="#cd2323" />
+                              <GridPane layoutX="65.0" layoutY="67.0" prefHeight="197.0" prefWidth="369.0" style="-fx-background-color: #e2e1d7; -fx-background-radius: 5px;" AnchorPane.bottomAnchor="132.0" AnchorPane.leftAnchor="65.0" AnchorPane.rightAnchor="433.0" AnchorPane.topAnchor="67.0">
                                  <children>
                                     <Label alignment="CENTER_RIGHT" prefHeight="44.0" prefWidth="142.0" text="Member ID">
                                        <font>
@@ -36,15 +36,15 @@
                                           <Font name="DejaVu Serif Bold" size="14.0" />
                                        </font>
                                     </Label>
-                                    <TextField id="txtMemberId" fx:id="txtMemberId" onAction="#checkoutHandler" prefHeight="30.0" prefWidth="196.0" GridPane.columnIndex="2" />
-                                    <TextField id="tstISBN" fx:id="txtISBN" onAction="#checkoutHandler" prefHeight="30.0" prefWidth="196.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                                    <TextField id="txtMemberId" fx:id="txtMemberId" onAction="#checkMemberValidity" prefHeight="30.0" prefWidth="196.0" GridPane.columnIndex="2" />
+                                    <TextField id="tstISBN" fx:id="txtISBN" onAction="#searchBookByISBN" prefHeight="30.0" prefWidth="196.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
                                     <TextField id="dueDate" fx:id="txtdueDate" editable="false" onAction="#checkoutHandler" prefHeight="30.0" prefWidth="196.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
                                  </children>
                                  <columnConstraints>
-                                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="202.0" minWidth="10.0" prefWidth="170.0" />
-                                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="113.0" minWidth="10.0" prefWidth="46.0" />
-                                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="405.0" minWidth="10.0" prefWidth="276.0" />
-                                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="405.0" minWidth="10.0" prefWidth="70.0" />
+                                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="202.0" minWidth="10.0" prefWidth="86.0" />
+                                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="141.0" minWidth="10.0" prefWidth="63.0" />
+                                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="405.0" minWidth="10.0" prefWidth="166.0" />
+                                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="405.0" minWidth="10.0" prefWidth="51.0" />
                                  </columnConstraints>
                                  <rowConstraints>
                                     <RowConstraints maxHeight="69.0" minHeight="10.0" prefHeight="69.0" vgrow="SOMETIMES" />
@@ -52,6 +52,72 @@
                                     <RowConstraints maxHeight="69.0" minHeight="10.0" prefHeight="69.0" vgrow="SOMETIMES" />
                                  </rowConstraints>
                               </GridPane>
+                              <Label layoutX="65.0" layoutY="24.0" text="Checkout Form" textAlignment="CENTER">
+                                 <font>
+                                    <Font size="29.0" />
+                                 </font>
+                              </Label>
+                              <Label layoutX="554.0" layoutY="21.0" text="Book Details" textAlignment="CENTER">
+                                 <font>
+                                    <Font size="29.0" />
+                                 </font>
+                              </Label>
+                              <GridPane layoutX="554.0" layoutY="65.0" prefHeight="186.0" prefWidth="335.0" style="-fx-background-color: #e2e1d7; -fx-background-radius: 5px;" AnchorPane.rightAnchor="30.0">
+                                <columnConstraints>
+                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="139.0" minWidth="10.0" prefWidth="95.0" />
+                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="206.0" minWidth="10.0" prefWidth="12.0" />
+                                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="206.0" minWidth="10.0" prefWidth="159.0" />
+                                </columnConstraints>
+                                <rowConstraints>
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                </rowConstraints>
+                                 <children>
+                                    <Label alignment="CENTER_RIGHT" prefHeight="44.0" prefWidth="138.0" text="Auther: " GridPane.rowIndex="1">
+                                       <font>
+                                          <Font name="DejaVu Serif Bold" size="14.0" />
+                                       </font>
+                                    </Label>
+                                    <Label alignment="CENTER_RIGHT" prefHeight="44.0" prefWidth="138.0" text="Availability:" GridPane.rowIndex="2">
+                                       <font>
+                                          <Font name="DejaVu Serif Bold" size="14.0" />
+                                       </font>
+                                    </Label>
+                                    <Label alignment="CENTER_RIGHT" prefHeight="30.0" prefWidth="136.0" style="-fx-background-radius: 8px;" text="Tittle: ">
+                                       <font>
+                                          <Font name="DejaVu Serif Bold" size="14.0" />
+                                       </font>
+                                    </Label>
+                                    <Label fx:id="coBookTitle" text="Label" GridPane.columnIndex="2">
+                                       <font>
+                                          <Font name="System Bold" size="14.0" />
+                                       </font>
+                                    </Label>
+                                    <Label fx:id="coBookAuth" text="Label" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                                       <font>
+                                          <Font name="System Bold" size="14.0" />
+                                       </font>
+                                    </Label>
+                                    <Label fx:id="coBookAvailability" text="Label" GridPane.columnIndex="2" GridPane.rowIndex="2">
+                                       <font>
+                                          <Font name="System Bold" size="14.0" />
+                                       </font>
+                                    </Label>
+                                    <Label fx:id="coBookCopyCount" text="Label" GridPane.columnIndex="2" GridPane.rowIndex="3">
+                                       <font>
+                                          <Font name="System Bold" size="14.0" />
+                                       </font>
+                                    </Label>
+                                    <Label alignment="CENTER_RIGHT" prefHeight="44.0" prefWidth="138.0" text="Copies Available:" GridPane.rowIndex="3">
+                                       <font>
+                                          <Font name="DejaVu Serif Bold" size="14.0" />
+                                       </font>
+                                    </Label>
+                                 </children>
+                              </GridPane>
+                              <Button layoutX="259.0" layoutY="285.0" mnemonicParsing="false" onAction="#bookCheckoutHandler" prefHeight="37.0" prefWidth="128.0" style="-fx-border-color: green;" text="CHECKOUT" textFill="#0c902b" />
                            </children>
                         </AnchorPane>
                   </content>
@@ -82,20 +148,35 @@
             </TabPane>
          </children>
       </AnchorPane>
-      <ImageView fitHeight="73.0" fitWidth="84.0" layoutX="56.0" layoutY="25.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="79.0" fitWidth="91.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/logo_mum.jpg" />
          </image>
       </ImageView>
-      <ImageView fitHeight="81.0" fitWidth="300.0" layoutX="205.0" layoutY="21.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="107.0" fitWidth="331.0" layoutX="270.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/logo.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="73.0" fitWidth="84.0" layoutX="526.0" layoutY="29.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="87.0" fitWidth="79.0" layoutX="807.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/mmy-large.jpg" />
          </image>
       </ImageView>
+      <Label layoutX="14.0" layoutY="98.0" prefHeight="16.0" prefWidth="148.0" text="Logged in as Librarian" textFill="#1f542c">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="840.0" layoutY="98.0" text="Logout" textFill="#254632" underline="true">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="380.0" layoutY="560.0" text="Powered by Group 1" textFill="#dd0808">
+         <effect>
+            <Reflection />
+         </effect>
+      </Label>
    </children>
 </Pane>
